Remove unused test method parameter